Issue #1514284 by DamienMcKenna, darrylh: Ensure form state is passed to user_login_finalize() to ensure hook_user_login is triggered correctly.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -103,6 +103,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   Twitter accounts.
 #1982786 by DamienMcKenna: Fixed signin callback using a D6 function.
 #1993470 by jamix, DamienMcKenna: Improved _twitter_filter_text().
+#1514284 by DamienMcKenna, darrylh: Ensure form state is passed to
+  user_login_finalize() to ensure hook_user_login is triggered correctly.
 
 
 Twitter 7.x-5.8, 2013-06-03
