--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -74,6 +74,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   Twitter accounts.
 #1993470 by jamix, DamienMcKenna: Improved _twitter_filter_text().
 #1514284 by DamienMcKenna: Some slight cleanup to the signup oauth callback.
+#2143605 by kladrian, DamienMcKenna: Reload the user object after logging in to
+  ensure a full user object is passed along to the various hooks.
 
 
 Twitter 6.x-5.1, 2013-04-19
