--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -88,6 +88,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1929126 by colin_vanarts, leewillis77, AdamPS, DamienMcKenna: Store the entire
   message for retweets.
 #2553107 by DamienMcKenna: Ported Drush improvements from 7.x-5.x.
+#2214867 by DamienMcKenna: Added index on {twitter}.created_time.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
