--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -108,6 +108,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2143605 by kladrian, DamienMcKenna: Reload the user object after logging in to
   ensure a full user object is passed along to the various hooks.
 #2214867 by DamienMcKenna: Added index on {twitter}.created_time.
+#1911494 by DamienMcKenna, Sheldon Rampton: Don't assume twitter_connect() works
+  every time, identify failures.
 
 
 Twitter 7.x-5.8, 2013-06-03
