--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -79,6 +79,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2249055 by DamienMcKenna: Fixed the paths mentioned in the README.txt.
 #2553107 by DamienMcKenna: Backported Drush improvements from 7.x-5.x.
 #2214867 by DamienMcKenna: Added index on {twitter}.created_time.
+#1911494 by DamienMcKenna, Sheldon Rampton: Don't assume twitter_connect() works
+  every time, identify failures.
 
 
 Twitter 6.x-5.1, 2013-04-19
