--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -92,6 +92,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1911494 by DamienMcKenna, Sheldon Rampton: Don't assume twitter_connect() works
   every time, identify failures.
 #2553077 by DamienMcKenna: Option to disable loading the bundled views.
+#2055685 by DamienMcKenna, marthinal: API calls for authenticated users should
+  use that account.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
