--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -82,6 +82,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1911494 by DamienMcKenna, Sheldon Rampton: Don't assume twitter_connect() works
   every time, identify failures.
 #2553077 by DamienMcKenna: Option to disable loading the bundled views.
+#2055685 by DamienMcKenna, marthinal: API calls for authenticated users should
+  use that account.
 
 
 Twitter 6.x-5.1, 2013-04-19
