--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -113,6 +113,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2553077 by DamienMcKenna: Option to disable loading the bundled views.
 #2055685 by DamienMcKenna, marthinal: API calls for authenticated users should
   use that account.
+#2388479 by DamienMcKenna: Warn that the hashtag text filter causes problems
+  with other HTML.
 
 
 Twitter 7.x-5.8, 2013-06-03
