Issue #1994362 by DamienMcKenna, mgriego: Reverted changes to update 6504, made it cover for more scenarios.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -86,6 +86,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   use that account.
 #2388479 by DamienMcKenna: Warn that the hashtag text filter causes problems
   with other HTML.
+#1994362 by DamienMcKenna, mgriego: Reverted changes to update 6504, made it
+  cover for more scenarios.
 
 
 Twitter 6.x-5.1, 2013-04-19
