Issue #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -96,6 +96,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   use that account.
 #2388479 by DamienMcKenna: Warn that the hashtag text filter causes problems
   with other HTML.
+#2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
