--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -116,6 +116,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2388479 by DamienMcKenna: Warn that the hashtag text filter causes problems
   with other HTML.
 #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
+#2119759 by djac, DamienMcKenna: Add index on {twitter_account}.uid.
 
 
 Twitter 7.x-5.8, 2013-06-03
