--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -91,6 +91,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2025899 by DamienMcKenna: Give a warning if OAuth v2 is installed, v3 is
   required.
 #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
+#2119759 by djac, DamienMcKenna: Add index on {twitter_account}.uid.
 
 
 Twitter 6.x-5.1, 2013-04-19
