--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -92,6 +92,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   required.
 #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
 #2119759 by djac, DamienMcKenna: Add index on {twitter_account}.uid.
+#2022561 by Elijah Lynn: Return the status message in hook_nodeapi.
 
 
 Twitter 6.x-5.1, 2013-04-19
