--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -93,6 +93,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
 #2119759 by djac, DamienMcKenna: Add index on {twitter_account}.uid.
 #2022561 by Elijah Lynn: Return the status message in hook_nodeapi.
+#2544672 by gurvan, DamienMcKenna: Add classes to linked inserted by the text
+  filters.
 
 
 Twitter 6.x-5.1, 2013-04-19
