--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -118,6 +118,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
 #2119759 by djac, DamienMcKenna: Add index on {twitter_account}.uid.
 #2022561 by Elijah Lynn: Return the status message in hook_node_insert/update.
+#2544672 by gurvan, DamienMcKenna: Add classes to linked inserted by the text
+  filters.
 
 
 Twitter 7.x-5.8, 2013-06-03
