--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -98,6 +98,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   with other HTML.
 #2222837 by rahulbile, DamienMcKenna: New permission for controlling settings.
 #2119759 by djac, DamienMcKenna: Add index on {twitter_account}.uid.
+#2544672 by gurvan, DamienMcKenna: Add classes to linked inserted by the text
+  filters.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
