--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -95,6 +95,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2022561 by Elijah Lynn: Return the status message in hook_nodeapi.
 #2544672 by gurvan, DamienMcKenna: Add classes to linked inserted by the text
   filters.
+#1648970 by DamienMcKenna, HaloFX, wouters_f: Optionally hide the Twitter button
+  on login forms.
 
 
 Twitter 6.x-5.1, 2013-04-19
