--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -120,6 +120,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2022561 by Elijah Lynn: Return the status message in hook_node_insert/update.
 #2544672 by gurvan, DamienMcKenna: Add classes to linked inserted by the text
   filters.
+#1648970 by DamienMcKenna, HaloFX, wouters_f: Optionally hide the Twitter button
+  on login forms.
 
 
 Twitter 7.x-5.8, 2013-06-03
