Issue #1275440 by ultimateboy: Internal API for retweeting a tweet.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -97,6 +97,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   filters.
 #1648970 by DamienMcKenna, HaloFX, wouters_f: Optionally hide the Twitter button
   on login forms.
+#1275440 by ultimateboy: Internal API for retweeting a tweet.
 
 
 Twitter 6.x-5.1, 2013-04-19
