--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -122,6 +122,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   filters.
 #1648970 by DamienMcKenna, HaloFX, wouters_f: Optionally hide the Twitter button
   on login forms.
+#1275440 by ultimateboy: Internal API for retweeting a tweet.
 
 
 Twitter 7.x-5.8, 2013-06-03
