--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -98,6 +98,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1648970 by DamienMcKenna, HaloFX, wouters_f: Optionally hide the Twitter button
   on login forms.
 #1275440 by ultimateboy: Internal API for retweeting a tweet.
+#1943440 by DamienMcKenna, Sheldon Rampton: Added new hooks around the timeline
+  loading process.
 
 
 Twitter 6.x-5.1, 2013-04-19
