Issue #1943440 by DamienMcKenna, Sheldon Rampton: Added new hooks around the timeline loading process.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -103,6 +103,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1648970 by DamienMcKenna, HaloFX, wouters_f: Optionally hide the Twitter button
   on login forms.
 #1275440 by ultimateboy: Internal API for retweeting a tweet.
+#1943440 by DamienMcKenna, Sheldon Rampton: Added new hooks around the timeline
+  loading process.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
