--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -100,6 +100,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1275440 by ultimateboy: Internal API for retweeting a tweet.
 #1943440 by DamienMcKenna, Sheldon Rampton: Added new hooks around the timeline
   loading process.
+#2357921 by mkolar, DamienMcKenna: Allow the OAuth callback URL to be changed.
 
 
 Twitter 6.x-5.1, 2013-04-19
