--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -126,6 +126,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1943440 by DamienMcKenna, Sheldon Rampton: Added new hooks around the timeline
   loading process.
 #2357921 by mkolar, DamienMcKenna: Allow the OAuth callback URL to be changed.
+#2403315 by DamienMcKenna: Custom field type for displaying the most recent
+  tweet by a specific user.
 
 
 Twitter 7.x-5.8, 2013-06-03
