--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -101,6 +101,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1943440 by DamienMcKenna, Sheldon Rampton: Added new hooks around the timeline
   loading process.
 #2357921 by mkolar, DamienMcKenna: Allow the OAuth callback URL to be changed.
+By DamienMcKenna: Renamed the twitter_account_load_all function to
+  twitter_load_accounts() to match v6.
 
 
 Twitter 6.x-5.1, 2013-04-19
