--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -130,6 +130,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   tweet by a specific user.
 #2403315 by DamienMcKenna: Follow-up to finish renaming the
   twitter_account_load_all function to twitter_load_accounts() to match v6.
+#1890926 by Drave Robber, DamienMcKenna: Drush command for posting tweets.
 
 
 Twitter 7.x-5.8, 2013-06-03
