--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -131,6 +131,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2403315 by DamienMcKenna: Follow-up to finish renaming the
   twitter_account_load_all function to twitter_load_accounts() to match v6.
 #1890926 by Drave Robber, DamienMcKenna: Drush command for posting tweets.
+#940060 by Jon Pugh, univate, justondoge, DamienMcKenna: Pass the current domain
+  when authenticating.
 
 
 Twitter 7.x-5.8, 2013-06-03
