--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -133,6 +133,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1890926 by Drave Robber, DamienMcKenna: Drush command for posting tweets.
 #940060 by Jon Pugh, univate, justondoge, DamienMcKenna: Pass the current domain
   when authenticating.
+#1974102 by kerasai, hussainweb, DamienMcKenna: Rename tweet.tpl.php to match
+  theme hook.
 
 
 Twitter 7.x-5.8, 2013-06-03
