Issue #1974102 by kerasai, hussainweb, DamienMcKenna: Rename tweet.tpl.php to match theme hook.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -111,6 +111,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1890926 by Drave Robber, DamienMcKenna: Drush command for posting tweets.
 #940060 by Jon Pugh, univate, justondoge, DamienMcKenna: Pass the current domain
   when authenticating.
+#1974102 by kerasai, hussainweb, DamienMcKenna: Rename tweet.tpl.php to match
+  theme hook.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
