--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -113,6 +113,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   when authenticating.
 #1974102 by kerasai, hussainweb, DamienMcKenna: Rename tweet.tpl.php to match
   theme hook.
+#1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
