Issue #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -106,6 +106,7 @@ By DamienMcKenna: Renamed the twitter_account_load_all function to
 #1890926 by Drave Robber, DamienMcKenna: Drush command for posting tweets.
 #940060 by Jon Pugh, univate, justondoge, DamienMcKenna: Pass the current domain
   when authenticating.
+#1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
 
 
 Twitter 6.x-5.1, 2013-04-19
