--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -107,6 +107,7 @@ By DamienMcKenna: Renamed the twitter_account_load_all function to
 #940060 by Jon Pugh, univate, justondoge, DamienMcKenna: Pass the current domain
   when authenticating.
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
+#2556013 by DamienMcKenna: Ensure the 'post' option is respected on new content.
 
 
 Twitter 6.x-5.1, 2013-04-19
