--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -136,6 +136,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1974102 by kerasai, hussainweb, DamienMcKenna: Rename tweet.tpl.php to match
   theme hook.
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
+#2556013 by DamienMcKenna: Ensure the 'post' option is respected on new content.
 
 
 Twitter 7.x-5.8, 2013-06-03
