--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -108,6 +108,7 @@ By DamienMcKenna: Renamed the twitter_account_load_all function to
   when authenticating.
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
 #2556013 by DamienMcKenna: Ensure the 'post' option is respected on new content.
+#2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
 
 
 Twitter 6.x-5.1, 2013-04-19
