Issue #2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -114,6 +114,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1974102 by kerasai, hussainweb, DamienMcKenna: Rename tweet.tpl.php to match
   theme hook.
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
+#2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
