Issue #2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -137,6 +137,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   theme hook.
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
 #2556013 by DamienMcKenna: Ensure the 'post' option is respected on new content.
+#2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
 
 
 Twitter 7.x-5.8, 2013-06-03
