Issue #2556611 by DamienMcKenna: New permission for controlling who has access to post using a global account.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -115,6 +115,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   theme hook.
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
 #2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
+#2556611 by DamienMcKenna: New permission for controlling who has access to
+  post using a global account.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
