--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -109,6 +109,8 @@ By DamienMcKenna: Renamed the twitter_account_load_all function to
 #1890926 by DamienMcKenna: Fixes to the Drush 'tweet' command.
 #2556013 by DamienMcKenna: Ensure the 'post' option is respected on new content.
 #2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
+#2556611 by DamienMcKenna: New permission for controlling who has access to
+  post using a global account.
 
 
 Twitter 6.x-5.1, 2013-04-19
