--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -111,6 +111,7 @@ By DamienMcKenna: Renamed the twitter_account_load_all function to
 #2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
 #2556611 by DamienMcKenna: New permission for controlling who has access to
   post using a global account.
+#2556011 by DamienMcKenna: Updated the README.txt file.
 
 
 Twitter 6.x-5.1, 2013-04-19
