--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -140,6 +140,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2239041 by DamienMcKenna: Replaced all http:// URLs with https:// ones.
 #2556611 by DamienMcKenna: New permission for controlling who has access to
   post using a global account.
+#2556011 by DamienMcKenna: Updated the README.txt file.
 
 
 Twitter 7.x-5.8, 2013-06-03
