Issue #2557757 by DamienMcKenna: Hide fields if the 'announce' checkbox is unchecked.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -118,6 +118,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2556611 by DamienMcKenna: New permission for controlling who has access to
   post using a global account.
 #2556011 by DamienMcKenna: Updated the README.txt file.
+#2557757 by DamienMcKenna: Hide fields if the 'announce' checkbox is unchecked.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
