--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -112,6 +112,7 @@ By DamienMcKenna: Renamed the twitter_account_load_all function to
 #2556611 by DamienMcKenna: New permission for controlling who has access to
   post using a global account.
 #2556011 by DamienMcKenna: Updated the README.txt file.
+#2558443 by DamienMcKenna: Fixed D7-style paths in documentation & help text.
 
 
 Twitter 6.x-5.1, 2013-04-19
