--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -124,6 +124,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2461937 by DamienMcKenna: Field widget improvements, don't post when editing
   content that's already published.
 #2559129 by DamienMcKenna: Fixed error when only one account to post from.
+#2558457 by DamienMcKenna: Additional logging during cron.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
