--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -141,6 +141,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2556611 by DamienMcKenna: New permission for controlling who has access to
   post using a global account.
 #2556011 by DamienMcKenna: Updated the README.txt file.
+#2558457 by DamienMcKenna: Additional logging during cron.
 
 
 Twitter 7.x-5.8, 2013-06-03
