--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -143,6 +143,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2556011 by DamienMcKenna: Updated the README.txt file.
 #2558457 by DamienMcKenna: Additional logging during cron.
 #2559153 by DamienMcKenna: Incorrect use of user_load() when posting tweets.
+#2559239 by DamienMcKenna: Fixed embedded tweets, other functionality after
+  recent changes to twitter_connect().
 
 
 Twitter 7.x-5.8, 2013-06-03
