--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -126,6 +126,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2559129 by DamienMcKenna: Fixed error when only one account to post from.
 #2558457 by DamienMcKenna: Additional logging during cron.
 #2559153 by DamienMcKenna: Incorrect use of user_load() when posting tweets.
+#2559239 by DamienMcKenna: Fixed embedded tweets, other functionality after
+  recent changes to twitter_connect().
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
