Issue #2163715 by migrad, hideaway, mkolar, DamienMcKenna: Optionally hide the new-user password message.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -128,6 +128,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2559153 by DamienMcKenna: Incorrect use of user_load() when posting tweets.
 #2559239 by DamienMcKenna: Fixed embedded tweets, other functionality after
   recent changes to twitter_connect().
+#2163715 by migrad, hideaway, mkolar, DamienMcKenna: Optionally hide the
+  new-user password message.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
