--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
-Twitter 7.x-5.x-dev, xxxx-xx-xx
--------------------------------
+Twitter 7.x-5.9, 2015-08-30
+---------------------------
 #2005516 by Elijah Lynn: Fix invalid arg to foreach @
   admin/config/services/twitter/post.
 #2182945 by alexdmccabe, jacobsdan, juampy: Update search to Twitter API v1.1.
