Preparing for further changes.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+Twitter 7.x-5.x-dev, xxxx-xx-xx
+-------------------------------
+
+
 Twitter 7.x-5.9, 2015-08-30
 ---------------------------
 #2005516 by Elijah Lynn: Fix invalid arg to foreach @
