--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+Twitter 7.x-6.x-dev, xxxx-xx-xx
+-------------------------------
+
+
 Twitter 7.x-6.0, 2015-08-30
 ---------------------------
 #1963524 by Sheldon Rampton: Fixed search_tweets() method not working in
