--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 Twitter 7.x-5.x-dev, xxxx-xx-xx
 -------------------------------
+#2560911 by mkolar: Regression to custom OAuth path functionality.
 
 
 Twitter 7.x-5.9, 2015-08-30
