Issue #2561255 by DamienMcKenna: Fixes for tests.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 Twitter 7.x-6.x-dev, xxxx-xx-xx
 -------------------------------
+#2561255 by DamienMcKenna: Fixes for tests.
 
 
 Twitter 7.x-6.0, 2015-08-30
