--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@ Twitter 7.x-5.x-dev, xxxx-xx-xx
 -------------------------------
 #2560911 by mkolar: Regression to custom OAuth path functionality.
 #2561255 by DamienMcKenna: Fixes for tests.
+#2561609 by DamienMcKenna: Fixed wrong function used to load a user object.
 
 
 Twitter 7.x-5.9, 2015-08-30
