--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
-Twitter 7.x-5.x-dev, xxxx-xx-xx
--------------------------------
+Twitter 7.x-5.10, 2015-09-04
+----------------------------
 #2560911 by mkolar: Regression to custom OAuth path functionality.
 #2561255 by DamienMcKenna: Fixes for tests.
 #2561609 by DamienMcKenna: Fixed wrong function used to load a user object.
