--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
-Twitter 7.x-6.x-dev, xxxx-xx-xx
--------------------------------
+Twitter 7.x-6.1, 2015-09-04
+---------------------------
 #2561255 by DamienMcKenna: Fixes for tests.
 #2561609 by DamienMcKenna: Fixed wrong function used to load a user object.
 
