--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+Twitter 7.x-5.x-dev, xxxx-xx-xx
+-------------------------------
+
+
 Twitter 7.x-5.10, 2015-09-04
 ----------------------------
 #2560911 by mkolar: Regression to custom OAuth path functionality.
