By DamienMcKenna: Keep the same default for all uses of twitter_post_types.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 Twitter 6.x-5.x-dev, xxxx-xx-xx
 -------------------------------
+By DamienMcKenna: Keep the same default for all uses of twitter_post_types.
 
 
 Twitter 6.x-5.3, 2015-09-04
