--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,7 @@
 Twitter 7.x-6.x-dev, xxxx-xx-xx
 -------------------------------
+#2544672 by gurvan: Fixed the classes added to embedded links to match what is
+  recommended/required by the Twitter API.
 
 
 Twitter 7.x-6.1, 2015-09-04
