--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,8 @@ Twitter 7.x-6.x-dev, xxxx-xx-xx
 #2544672 by gurvan: Fixed the classes added to embedded links to match what is
   recommended/required by the Twitter API.
 #2580175 by kenwest, DamienMcKenna: Wasn't saving is_global account option.
+#2580185 by kenwest, DamienMcKenna: Twitter Post form didn't load existing
+  value.
 
 
 Twitter 7.x-6.1, 2015-09-04
