--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,7 @@
 Twitter 7.x-6.x-dev, xxxx-xx-xx
 -------------------------------
+#2584385 by joelpittet: Wrong variable used to trigger
+  hook_twitter_prefetch_timeline.
 
 
 Twitter 7.x-6.2, 2015-10-05
